<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/delete_task_tool"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/title_delete"
        app:showAsAction="ifRoom"
        android:tint="?attr/colorAccent"/>

    <item
        android:id="@+id/update_task_tool"
        android:icon="@drawable/ic_baseline_update_24_black"
        android:title="@string/title_update"
        app:showAsAction="ifRoom"
        android:tint="?attr/colorAccent"/>

    <item
        android:id="@+id/new_task_tool"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/title_new"
        app:showAsAction="ifRoom"
        android:tint="?attr/colorAccent"/>

</menu>